--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,5 @@ fabric.properties
 !.idea/runConfigurations
 
 # End of https://www.toptal.com/developers/gitignore/api/webstorm+all
+
+deploy.sh
